# Hubei-EXin

./: CMakeLists.txt  README.md
arch/: PKGBUILD  ppp-hubeiexin.install
debian/: control
src/: CMakeLists.txt  asm.c  asm.h  crossexam.c  crossexam.h  exam.c  exam.h  hubeiexin.c  hubeiexin.h  platform.h  platform_linux.c  platform_win32.c  ppp_hubeiexin.ip-up  ppp_plugin.c  ppp_plugin.h  ppp_setup.py  ppp_setup.rs  ppp_version.c  ras_dialer.c  ras_dialer.h  utils.c  utils.h
